data/all_generated_tests/raw_wast_tests/loop_UnreachableCodeExecution_422.wast
;; 3. **Test Description 3**: Design a loop where a `br_if` instruction is placed with a condition that should never be met. Ensure the increment condition within the loop skips correctly and doesn't erroneously trigger the branch to an `unreachable` instruction placed immediately after the loop.

(assert_invalid
  (module
    (func (result i32)
      (loop (result i32)
        (i32.const 1)  ;; Push the constant 1 onto the stack
        (br_if 0       ;; This should branch back to the start of the loop only if the top stack value is non-zero
          (i32.const 0)) ;; It pushes 0 onto the stack, the condition should be false
        (unreachable)  ;; This should never be reached
      )
    )
  )
  "type mismatch"
)